# bookworm-api/app/Domains/Books/Controllers/BestSellersController.php
@@ -17,24 +17,6 @@ use Illuminate\Http\JsonResponse;
  *     tags={"Books"},
  *     summary="Get best selling books",
  *     description="",
- *     @OA\Parameter(
- *         name="search",
- *         in="query",
- *         @OA\Schema(type="string"),
- *         description="Search term to filter the results by"
- *     ),
- *     @OA\Parameter(
- *         name="pageSize",
- *         in="query",
- *         @OA\Schema(type="integer"),
- *         description="Number of items to return per page. Defaults to 20"
- *     ),
- *     @OA\Parameter(
- *         name="cache",
- *         in="query",
- *         @OA\Schema(type="boolean"),
- *         description="Whether to retrieve data from cache or API. Defaults to true"
- *     ),
  *     @OA\Response(
  *         response="200",
  *         description="Successful operation",
@@ -49,11 +31,9 @@ class BestSellersController extends Controller
 {
     public function __invoke(BooksApiServiceContract $booksApiService): JsonResponse
     {
-        $options = new GetCachedBestSellerOptions(true);
-        $books = $booksApiService->getCachedBestSellers($options);
-
-        return new JsonResponse($books);
+        return new JsonResponse(
+            $booksApiService->getCachedBestSellers()
+        );
     }
-
 }
 
