# bookworm-api/app/Domains/Books/Controllers/BestSellersSearchController.php
@@ -6,8 +6,6 @@ namespace App\Domains\Books\Controllers;
 
 use App\Domains\Books\Contracts\BooksApiServiceContract;
 use App\Domains\Books\DTOs\Services\BooksApiGetOptionsDTO;
-use App\Domains\Books\DTOs\Services\GetCachedBestSellerOptions;
-use App\Domains\Books\Requests\BestSellersRequest;
 use App\Domains\Books\Requests\BestSellersSearchRequest;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\JsonResponse;
@@ -30,12 +28,6 @@ use Illuminate\Http\JsonResponse;
  *         @OA\Schema(type="integer"),
  *         description="Number of items to return per page. Defaults to 20"
  *     ),
- *     @OA\Parameter(
- *         name="cache",
- *         in="query",
- *         @OA\Schema(type="boolean"),
- *         description="Whether to retrieve data from cache or API. Defaults to true"
- *     ),
  *     @OA\Response(
  *         response="200",
  *         description="Successful operation",
@@ -55,7 +47,7 @@ class BestSellersSearchController extends Controller
         $pageSize = isset($validated['pageSize']) ? (int)$validated['pageSize'] : null;
 
         return new JsonResponse(
-            $booksApiService->getBookDTOs(
+            $booksApiService->getCachedBestSellers(
                 new BooksApiGetOptionsDTO($search, $pageSize)
             )
         );
